tests/ui/generic-associated-types/unsatisfied-item-lifetime-bound.stderr
warning: unnecessary lifetime parameter `'a`
  --> $DIR/unsatisfied-item-lifetime-bound.rs:4:12
   |
LL |     type Y<'a: 'static>;
   |            ^^
   |
   = help: you can use the `'static` lifetime directly, in place of `'a`
note: the lint level is defined here
  --> $DIR/unsatisfied-item-lifetime-bound.rs:1:9
   |
LL | #![warn(unused_lifetimes)]
   |         ^^^^^^^^^^^^^^^^

error[E0478]: lifetime bound not satisfied
  --> $DIR/unsatisfied-item-lifetime-bound.rs:19:8
   |
LL |     f: <T as X>::Y<'a>,
   |        ^^^^^^^^^^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/unsatisfied-item-lifetime-bound.rs:18:10
   |
LL | struct C<'a, T: X> {
   |          ^^
   = note: but lifetime parameter must outlive the static lifetime

error[E0478]: lifetime bound not satisfied
  --> $DIR/unsatisfied-item-lifetime-bound.rs:9:18
   |
LL |     type Y<'a> = &'a ();
   |                  ^^^^^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/unsatisfied-item-lifetime-bound.rs:9:12
   |
LL |     type Y<'a> = &'a ();
   |            ^^
   = note: but lifetime parameter must outlive the static lifetime

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0478`.
